--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> 
+    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
   </body>
 </html>
